--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-router-dom": "^6.17.0",
-    "react-toastify": "^9.1.3"
+    "react-toastify": "^9.1.3",
+    "use-debounce": "^9.0.4"
   },
   "devDependencies": {
     "@types/node": "^20",
